--- a/contact.html
+++ b/contact.html
@@ -149,9 +149,9 @@
                      <div class="widget">
                         <h6 class="text-uppercase">OFFICE 01</h6>
                         <ul class="list-unstyled address">
-                           <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                           <li><i class="lnr lnr-envelope"></i><span>theoutcomenetwork@gmail.com</span></li>
-                    <li><i class="icon-phone"></i><span>705-881-4614</span></li>
+                            <li><span class="lnr lnr-map-marker"></span><span>The Outcome Network ON, Canada.</span></li>
+                            <li><span class="lnr lnr-envelope"></span>info@theoutcomenetwork.ca</li>
+                            <li><span class="lnr lnr-phone-handset"></span>705-881-4614</li>
                         </ul>
                      </div>
                      <div class="widget">
@@ -208,8 +208,8 @@
                   <div class="col-md-4 col-sm-6 mb-4">
                      <h4 class="solid-weight text-uppercase">Contact Info</h4>
                      <ul class="icon-list2 lead">
-                        <li><span class="lnr lnr-map-marker"></span><span>McCauley Edmonton <br> AB, Canada</span></li>
-                        <li><span class="lnr lnr-envelope"></span>theoutcomenetwork@gmail.com</li>
+                        <li><span class="lnr lnr-map-marker"></span><span>The Outcome Network ON, Canada.</span></li>
+                        <li><span class="lnr lnr-envelope"></span>info@theoutcomenetwork.ca</li>
                         <li><span class="lnr lnr-phone-handset"></span>705-881-4614</li>
                      </ul>
                      <div class="mt-2">
@@ -269,8 +269,8 @@
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Contact</h6>
                         <ul class="list-unstyled address">
-                            <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                            <li><i class="lnr lnr-envelope"></i><a href="mailto:theoutcomenetwork@gmail.com">theoutcomenetwork@gmail.com</a></li>
+                            <li><i class="lnr lnr-map-marker"></i><span>The Outcome Network ON, Canada.</span></li>
+                            <li><i class="lnr lnr-envelope"></i><a href="mailto:otto@theoutcomenetwork.ca">otto@theoutcomenetwork.ca</a></li>
                             <li><i class="lnr lnr-phone-handset"></i><span>705-881-4614</span></li>
                         </ul>
                     </div>
