--- a/registration.html
+++ b/registration.html
@@ -155,9 +155,9 @@
             <div class="widget">
                 <h6 class="text-uppercase">OFFICE 01</h6>
                 <ul class="list-unstyled address">
-                    <li><i class="lnr lnr-map-marker"></i><span>The Outcome Network ON, Canada.</span></li>
-                    <li><i class="lnr lnr-envelope"></i><span>otto@theoutcomenetwork.ca</span></li>
-                    <li><i class="icon-phone"></i><span>705-881-4614</span></li>
+                    <li><span class="lnr lnr-map-marker"></span><span>The Outcome Network ON, Canada.</span></li>
+                    <li><span class="lnr lnr-envelope"></span>info@theoutcomenetwork.ca</li>
+                    <li><span class="lnr lnr-phone-handset"></span>705-881-4614</li>
                 </ul>
             </div>
             <div class="widget">
@@ -263,9 +263,9 @@
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Contact</h6>
                         <ul class="list-unstyled address">
-                            <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                            <li><i class="lnr lnr-envelope"></i><a href="mailto:theoutcomenetwork@gmail.com">theoutcomenetwork@gmail.com</a></li>
-                            <li><i class="lnr lnr-phone-handset"></i><span>705-881-4614</span></li>
+                            <li><span class="lnr lnr-map-marker"></span><span>The Outcome Network ON, Canada.</span></li>
+                            <li><span class="lnr lnr-envelope"></span>info@theoutcomenetwork.ca</li>
+                            <li><span class="lnr lnr-phone-handset"></span>705-881-4614</li>
                         </ul>
                     </div>
                 </div>
