--- a/testimonial.html
+++ b/testimonial.html
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="col-md-12 text-left mt-1 ">
 <!--                    <h1 class="title" style="text-align: center;">Testimonials</h1>-->
-                   <p>“Thank you so much for your hard work, persistence and determination in working with me and your client, to put together an outstanding career opportunity. You certainly stand out from other recruiters in terms of creating relationships. I feel very fortunate to have worked with someone who is extremely dedicated to her profession, meticulous with follow-up, and who has offered excellent advice, guidance and encouragement throughout the process. You have been a pleasure to work with and your hard work should not go unnoticed. I would, without reservation, refer you to any of my colleagues who may be seeking such services in the future.”</p>
+                   <p>“Thank you so much for your hard work, persistence and determination in working with me and your client, to put together an outstanding career opportunity. You certainly stand out from other recruiters in terms of creating relationships. I feel very fortunate to have worked with someone who is extremely dedicated to his profession, meticulous with follow-up, and who has offered excellent advice, guidance and encouragement throughout the process. You have been a pleasure to work with and your hard work should not go unnoticed. I would, without reservation, refer you to any of my colleagues who may be seeking such services in the future.”</p>
                    <h5 style="text-align: right">- Clinical Administrator</h5>
                 </div>
             </div>
