--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
                   <div class="col-md-4 col-sm-6 mb-4">
                      <h4 class="solid-weight text-uppercase">Contact Info</h4>
                      <ul class="icon-list2 lead">
-                        <li><span class="lnr lnr-map-marker"></span><span>The Outcome Network ON, Canada.</span></li>
+                        <li><span class="lnr lnr-map-marker"></span><span>The Outcome Network, Canada.</span></li>
                         <li><span class="lnr lnr-envelope"></span>info@theoutcomenetwork.ca</li>
                         <li><span class="lnr lnr-phone-handset"></span>705-881-4614</li>
                      </ul>
