--- a/services.html
+++ b/services.html
@@ -126,7 +126,7 @@
                 <h6 class="text-uppercase">OFFICE 01</h6>
                 <ul class="list-unstyled address">
                     <li><i class="lnr lnr-map-marker"></i><span>The Outcome Network ON, Canada.</span></li>
-                    <li><i class="lnr lnr-envelope"></i><span>otto@theoutcomenetwork.ca</span></li>
+                    <li><i class="lnr lnr-envelope"></i><span>info@theoutcomenetwork.ca</span></li>
                     <li><i class="icon-phone"></i><span>705-881-4614</span></li>
                 </ul>
             </div>
@@ -330,7 +330,7 @@ Our Network works as an extension of your organization, providing expert guidanc
                         <h6 class="text-uppercase">Contact</h6>
                         <ul class="list-unstyled address">
                             <li><i class="lnr lnr-map-marker"></i><span>The Outcome Network ON, Canada.</span></li>
-                            <li><i class="lnr lnr-envelope"></i><a href="mailto:otto@theoutcomenetwork.ca">otto@theoutcomenetwork.ca</a></li>
+                            <li><i class="lnr lnr-envelope"></i><a href="mailto:info@theoutcomenetwork.ca">info@theoutcomenetwork.ca</a></li>
                             <li><i class="lnr lnr-phone-handset"></i><span>705-881-4614</span></li>
                         </ul>
                     </div>
