--- a/contact.html
+++ b/contact.html
@@ -270,7 +270,7 @@
                         <h6 class="text-uppercase">Contact</h6>
                         <ul class="list-unstyled address">
                             <li><i class="lnr lnr-map-marker"></i><span>The Outcome Network ON, Canada.</span></li>
-                            <li><i class="lnr lnr-envelope"></i><a href="mailto:otto@theoutcomenetwork.ca">otto@theoutcomenetwork.ca</a></li>
+                            <li><i class="lnr lnr-envelope"></i><a href="mailto:info@theoutcomenetwork.ca">info@theoutcomenetwork.ca</a></li>
                             <li><i class="lnr lnr-phone-handset"></i><span>705-881-4614</span></li>
                         </ul>
                     </div>
