--- a/application.html
+++ b/application.html
@@ -277,7 +277,7 @@
                    <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">About</h6>
                         <img style="width: 200px; margin-bottom: 20px" src="images/brand/logo-2.png" alt="">
-                        <p>A Leader in Workforce Solutions and Behavior Support.</p>
+                        <p>A Leader in Staffing Solutions and Behavior Support.</p>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Services</h6>
