--- a/contact.html
+++ b/contact.html
@@ -149,9 +149,9 @@
                      <div class="widget">
                         <h6 class="text-uppercase">OFFICE 01</h6>
                         <ul class="list-unstyled address">
-                            <li><span class="lnr lnr-map-marker"></span><span>The Outcome Network ON, Canada.</span></li>
-                            <li><span class="lnr lnr-envelope"></span>info@theoutcomenetwork.ca</li>
-                            <li><span class="lnr lnr-phone-handset"></span>705-881-4614</li>
+                            <li><i class="lnr lnr-map-marker"></i><span>The Outcome Network ON, Canada.</span></li>
+                            <li><i class="lnr lnr-envelope"></i><a href="mailto:info@theoutcomenetwork.ca">info@theoutcomenetwork.ca</a></li>
+                            <li><i class="lnr lnr-phone-handset"></i><span>705-881-4614</span></li>
                         </ul>
                      </div>
                      <div class="widget">
