--- a/services.html
+++ b/services.html
@@ -150,7 +150,7 @@
 <!--        <div class="container">-->
 <!--            <div class="row intro-title">-->
 <!--                <div class="col-sm-8 col-md-offset-2 text-center">-->
-<!--                    <h1 class="title">A Leader in Workforce Solutions and Behavior Support</h1>-->
+<!--                    <h1 class="title">A Leader in Staffing Solutions and Behavior Support</h1>-->
 <!--                </div>-->
 <!--            </div>-->
 <!--        </div>-->
@@ -161,7 +161,7 @@
 <!--    <div class="container mt-5 pt-5 mb-5 pb-5">-->
 <!--        <div class="row intro-title">-->
 <!--            <div class="col-sm-8 col-md-offset-2 text-center">-->
-<!--                <h1 class="title">A Leader in Workforce Solutions and Behavior Support</h1>-->
+<!--                <h1 class="title">A Leader in Staffing Solutions and Behavior Support</h1>-->
 <!--            </div>-->
 <!--        </div>-->
 <!--    </div>-->
@@ -265,7 +265,7 @@
                 </div>
                 <div class="col-md-10 text-left mt-1 ">
                    <h2 class="m-0">Consulting Services</h2>
-                    <p class="lead">Efficient, functional human resource processes, accurate workforce needs identification, actionable plans, and effective change management are all vital to organizational success.
+                    <p class="lead">Efficient, functional human resource processes, accurate Staffing needs identification, actionable plans, and effective change management are all vital to organizational success.
 The Outcome Network consulting practice can help you get there with our targeted engagements and proven solutions to improve productivity, promote efficiency, enhance communication, and increase employee engagement.
 Our Network works as an extension of your organization, providing expert guidance, deploying proven strategies, and engaging management solutions to help your organization thrive. Our solutions include, but are not limited to:</p>
                    <ul>
