--- a/application.html
+++ b/application.html
@@ -138,7 +138,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
+                        <a href="about.html" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
                             <li><a href="about.html">About</a></li>
                             <li><a href="mission.html">Mission</a></li>
@@ -156,14 +156,14 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Employers</a>
+                        <a href="providers.html" class="dropdown-toggle" data-toggle="dropdown">Employers</a>
                         <ul class="dropdown-menu">
                            <li><a href="providers.html">Our Service Providers</a></li>
                             <li><a href="request.html">Request Fof Employee</a></li>
                         </ul>
                     </li> 
                     <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
+                        <a href="testimonial.html" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
                             <li><a href="testimonial.html">Testimonials</a></li>
                             <li><a href="application.html">Application for Employment</a></li>
