--- a/request.html
+++ b/request.html
@@ -151,7 +151,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
+                        <a href="about.html" class="dropdown-toggle" data-toggle="dropdown">Our Story</a>
                         <ul class="dropdown-menu">
                             <li><a href="about.html">About</a></li>
                             <li><a href="mission.html">Mission</a></li>
@@ -169,14 +169,14 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Employers</a>
+                        <a href="providers.html" class="dropdown-toggle" data-toggle="dropdown">Employers</a>
                         <ul class="dropdown-menu">
                            <li><a href="providers.html">Our Service Providers</a></li>
                             <li><a href="request.html">Request Fof Employee</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
+                        <a href="testimonial.html" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
                         <ul class="dropdown-menu">
                             <li><a href="testimonial.html">Testimonials</a></li>
                             <li><a href="application.html">Application for Employment</a></li>
@@ -222,17 +222,6 @@
         <!-- End Side Menu -->
     </nav>
     <!-- End Navigation -->
-    <!-- Banner -->
-<!--    <section class="inner-intro dark-bg overlay jarallax" data-overlay-color="dark" data-overlay="8" data-bg-img="images/slide1.jpg" data-jarallax-video="https://www.youtube.com/watch?v=0aCbYxJ9gus">-->
-<!--        <div class="container">-->
-<!--            <div class="row intro-title">-->
-<!--                <div class="col-sm-12 text-center">-->
-<!--                    <h1 class="title">Request An Employee</h1>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
-    <!-- End Banner -->
     <!-- Our service -->
     <section class="">
         <div class="container">
