--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <video style="position: absolute; width: 130%;height: 130%;transform: translate(-50%,-50%);left:50%;top: 50%;" autoplay loop id="video-background" muted plays-inline>
           <source src="video/bg.mkv" type="video/mp4">
         </video>
-    <section class="full-height bg white-text header-slide single-image overlay" data-overlay-color="dark" data-overlay="4" >
+    <section class="full-height bg white-text header-slide single-image overlay" data-overlay-color="dark" data-overlay="2" >
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
@@ -198,6 +198,7 @@
                    <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">About</h6>
                         <img style="width: 200px; margin-bottom: 20px" src="images/brand/logo-2.png" alt="">
+                        <h6>Insured and Licensed</h6>
                         <p>A Leader in Staffing Solutions and Behavior Support.</p>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
