--- a/index.html
+++ b/index.html
@@ -184,12 +184,17 @@
                     <a href="about.html" class="btn btn-default btn-radius fill-dark">Read More</a>
                 </div>
                 <div class="col-sm-6">
-                    <div class="video-info"> <img class="img-responsive center-block" src="images/corporate/image1.jpg" alt="" /> <a class="popup-vimeo video-btn theme-bg" title="Video" href="https://www.youtube.com/watch?v=MYo-57LM_lk"><i class="icon-control-play icons"></i></a> </div>
+                    <div class="video-info"> <img class="img-responsive center-block" src="images/corporate/image1.jpg" alt="" /> <a class="popup-vimeo video-btn theme-bg" title="Video" href="video/video.mp4"><i class="icon-control-play icons"></i></a> </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- End About -->
+<!--
+    <video width="320" height="240" autoplay>
+      <source src="video/video.mp4" type="video/mp4">
+    </video>
+-->
     <!-- Footer -->
     <footer class="footer-dark">
         <div class="footer-top">
@@ -198,7 +203,6 @@
                    <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">About</h6>
                         <img style="width: 200px; margin-bottom: 20px" src="images/brand/logo-2.png" alt="">
-                        <h6>Insured and Licensed</h6>
                         <p>A Leader in Staffing Solutions and Behavior Support.</p>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
