--- a/contact.html
+++ b/contact.html
@@ -247,6 +247,7 @@
                    <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">About</h6>
                         <img style="width: 200px; margin-bottom: 20px" src="images/brand/logo-2.png" alt="">
+                        <h6 class="white-text">Insured and Licensed</h6>
                         <p>A Leader in Staffing Solutions and Behavior Support.</p>
                     </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
