--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
     <!-- End Navigation -->
     <!-- Banner -->
     <div class="div" style="position: relative; overflow: hidden" >
-        <video style="position: absolute; width: 130%;height: 130%;transform: translate(-50%,-50%);left:50%;top: 50%;" autoplay loop id="video-background" muted plays-inline>
+        <video class="banar-video" style="" autoplay loop id="video-background" muted plays-inline>
           <source src="video/bg.mkv" type="video/mp4">
         </video>
-    <section class="full-height bg white-text header-slide single-image overlay" data-overlay-color="dark" data-overlay="2" >
+    <section class="full-height bg white-text header-slide single-image overlay home-banner" data-overlay-color="dark" data-overlay="2" >
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
