--- a/application.html
+++ b/application.html
@@ -209,17 +209,6 @@
         <!-- End Side Menu -->
     </nav>
     <!-- End Navigation -->
-    <!-- Banner -->
-<!--    <section class="inner-intro dark-bg overlay jarallax" data-overlay-color="dark" data-overlay="8" data-bg-img="images/slide1.jpg" data-jarallax-video="https://www.youtube.com/watch?v=0aCbYxJ9gus">-->
-<!--        <div class="container">-->
-<!--            <div class="row intro-title">-->
-<!--                <div class="col-sm-12 text-center">-->
-<!--                    <h1 class="title">Application for Employment</h1>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
-    <!-- End Banner -->
     <!-- Our service -->
     <section class="">
         <div class="container">
@@ -242,20 +231,20 @@
                         <div class="row">
                             <h3>Your Contact Information</h3>
                             <div class="form-group col-md-12">
-                                <input type="text" name="name" id="name" class="form-control" placeholder="Full Name*">
+                                <input type="text" name="name" id="name" class="form-control" placeholder="Full Name*" required >
                             </div>
                             <div class="form-group col-md-12">
-                                <input type="text" name="company" id="company" class="form-control" placeholder="Company*">
+                                <input type="text" name="company" id="company" class="form-control" placeholder="Company*" required >
                             </div>
                             <div class="form-group col-md-12">
-                                <input type="number" name="phone" id="phone" class="form-control" placeholder="Phone*">
+                                <input type="number" name="phone" id="phone" class="form-control" placeholder="Phone*" required >
                             </div>
                             <div class="form-group col-md-12">
-                                <input type="email" name="email" id="email" class="form-control" placeholder="Email*">
+                                <input type="email" name="email" id="email" class="form-control" placeholder="Email*" required >
                             </div>
                             <div class="form-group col-md-12">
                                <label for="file">Upload Your Resume*</label>
-                                <input type="file" name="attach[]" id="file" style="padding: 7px 20px; border: 2px solid #e6e6e6; width: 100%;" placeholder="Email*">
+                                <input type="file" name="attach[]" id="file" style="padding: 7px 20px; border: 2px solid #e6e6e6; width: 100%;" placeholder="Email*" required >
                             </div>
                             
                             
