--- a/contact.html
+++ b/contact.html
@@ -187,16 +187,16 @@
 					 <form id="contactform" role="form" method="post" action="">
                         <div class="row">
                            <div class="form-group col-md-6">
-                              <input type="text" name="name" id="name" class="form-control" placeholder="Name*">
+                              <input type="text" name="name" id="name" class="form-control" placeholder="Name*" required >
                            </div>
                            <div class="form-group col-md-6">
-                              <input type="email" name="email" id="email" class="form-control" placeholder="Email*">
+                              <input type="email" name="email" id="email" class="form-control" placeholder="Email*" required >
                            </div>
                            <div class="form-group col-md-12">
-                              <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject*">
+                              <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject*" required >
                            </div>
                            <div class="form-group col-md-12">
-                              <textarea name="message" id="message" class="form-control" rows="3" placeholder="Message"></textarea>
+                              <textarea name="message" id="message" class="form-control" rows="3" placeholder="Message" required ></textarea>
                            </div>
                            <div class="form-group col-md-12">
                               <button name="btn" type="submit" class="btn btn-default btn-rounded fill-dark">Submit</button>
