--- a/registration.html
+++ b/registration.html
@@ -196,16 +196,16 @@
                     <form id="contactform" class="col-md-8 col-md-offset-2" role="form" method="post" action="">
                         <div class="row">
                             <div class="form-group col-md-12">
-                                <input type="text" name="name" id="name" class="form-control" placeholder="Your Name *">
+                                <input type="text" name="name" id="name" class="form-control" placeholder="Your Name *" required >
                             </div>
                             <div class="form-group col-md-12">
-                                <input type="number" name="phone" id="phone" class="form-control" placeholder="Phone Number*">
+                                <input type="number" name="phone" id="phone" class="form-control" placeholder="Phone Number*" required >
                             </div>
                             <div class="form-group col-md-12">
-                                <input type="email" name="email" id="email" class="form-control" placeholder="E-mail*">
+                                <input type="email" name="email" id="email" class="form-control" placeholder="E-mail*" required >
                             </div>
                             <div class="form-group col-md-12">
-                                <select class="form-control" name="course" id="course">
+                                <select class="form-control" name="course" id="course" required >
                                     <option value="">--- Please Select ---</option>
                                     <option label="Introduction to Applied Behavior Analysis (ABA)" value="Introduction to Applied Behavior Analysis (ABA)">Introduction to Applied Behavior Analysis (ABA)</option>
                                     <option label="Medication and Pharmacology" value="Medication and Pharmacology">Medication and Pharmacology</option>
@@ -218,10 +218,10 @@
                                 </select>
                             </div>
                             <div class="form-group col-md-12">
-                                <input type="courseDate" name="courseDate" id="courseDate" class="form-control" placeholder="Course Date*">
+                                <input type="courseDate" name="courseDate" id="courseDate" class="form-control" placeholder="Course Date*" required >
                             </div>
                             <div class="form-group col-md-12">
-                                <textarea name="additionalNotes" id="additionalNotes" class="form-control" rows="3" placeholder="Additional Notes*"></textarea>
+                                <textarea name="additionalNotes" id="additionalNotes" class="form-control" rows="3" placeholder="Additional Notes*" required ></textarea>
                             </div>
                             <div class="form-group col-md-12">
                                 <button name="btn" type="submit" class="btn btn-default btn-rounded fill-dark">Submit</button>
