--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </nav>
     <!-- End Navigation -->
     <!-- Banner -->
-    <div class="div" style="position: relative; overflow: hidden" >
+    <div class="divhome-banner" style="position: relative; overflow: hidden" >
         <video class="banar-video" style="" autoplay loop id="video-background" muted plays-inline>
           <source src="video/bg.mkv" type="video/mp4">
         </video>
