--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
     </nav>
     <!-- End Navigation -->
     <!-- Banner -->
-    <div class="divhome-banner" style="position: relative; overflow: hidden" >
+    <div class="div" style="position: relative; overflow: hidden" >
         <video class="banar-video" style="" autoplay loop id="video-background" muted plays-inline>
           <source src="video/bg.mkv" type="video/mp4">
         </video>
-    <section class="full-height bg white-text header-slide single-image overlay home-banner" data-overlay-color="dark" data-overlay="2" >
+    <section class="full-height bg white-text header-slide single-image overlay home-banner home-banner-bg" data-overlay-color="dark" data-overlay="2" >
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
