--- a/about.html
+++ b/about.html
@@ -146,11 +146,11 @@
     </nav>
     <!-- End Navigation -->
     <!-- Banner -->
-    <div class="div" style="position: relative; overflow: hidden" >
+    <div class="div " style="position: relative; overflow: hidden" >
         <video style="position: absolute; width: 200%;height: 200%;transform: translate(-50%,-50%);left:50%;top: 50%;" autoplay loop id="video-background" muted plays-inline>
             <source src="video/bg.mkv" type="video/mp4">
         </video>
-        <section class="inner-intro bg overlay jarallax white-text" data-overlay-color="dark" data-overlay="2" >
+        <section class="inner-intro bg overlay jarallax white-text home-banner-bg" data-overlay-color="dark" data-overlay="2" >
             <div class="container">
                 <div class="row intro-title">
                     <div class="col-sm-12 text-center">
